# tears-in-rain

./: .gitignore  CMakeLists.txt
include/: alloc.h
src/: alloc.c  main.c
